--- a/src/Components/NavButton/navbutton.css
+++ b/src/Components/NavButton/navbutton.css
@@ -6,3 +6,10 @@ i img{
     display: block;
     cursor: pointer;
   }
+
+  @media (min-width: 320px) and (max-width: 767px) {
+    /* i img{
+      width: 50px;
+    } */
+
+}
