--- a/src/Components/NavButton/navbutton.css
+++ b/src/Components/NavButton/navbutton.css
@@ -1,6 +1,6 @@
 i img{
     width: 3.563rem;
-    height: 3.438rem;
+    height: 7.1vh;
     z-index: 100;
     background: transparent;
     display: block;
