--- a/src/Components/BotonSeccion1Hero1/botonseccion1hero1.css
+++ b/src/Components/BotonSeccion1Hero1/botonseccion1hero1.css
@@ -6,7 +6,7 @@ a{
     background: linear-gradient(87.46deg, #4338CA 0%, #5E52F3 100%);
     border-radius: 6px;
     width: 240px;
-    height: 45px;
+    height: 5.7vh;
     color: #fff;
     text-decoration: none;
     font-weight: 500;
