--- a/src/Components/Hero1/hero1.css
+++ b/src/Components/Hero1/hero1.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(255, 255, 255);
+    background: #EBEBEB;
+    min-height: 100vh;
 }
 
