--- a/src/Components/Parrafo1Seccion1Hero1/parrafo1seccion1hero1.css
+++ b/src/Components/Parrafo1Seccion1Hero1/parrafo1seccion1hero1.css
@@ -3,5 +3,7 @@ p{
     padding: 20px;
     display: flex;
     font-size: 24px;
+    width: 500px;
     line-height: 3.57vh;
+    font-weight: 300;
 }
