--- a/src/Components/Parrafo1Seccion1Hero1/parrafo1seccion1hero1.css
+++ b/src/Components/Parrafo1Seccion1Hero1/parrafo1seccion1hero1.css
@@ -1,4 +1,4 @@
-p{
+#parrafo1{
     margin: 0;
     padding: 20px;
     display: flex;
@@ -6,4 +6,10 @@ p{
     width: 500px;
     line-height: 3.57vh;
     font-weight: 300;
+}
+
+@media (min-width: 320px) and (max-width: 567px) {
+    #parrafo1{
+        width:320px;
+    }
 }
