--- a/src/Components/ParrafosForm/parrafosform.css
+++ b/src/Components/ParrafosForm/parrafosform.css
@@ -1,9 +1,11 @@
 .parrafos-form{
-    margin-top: 20px;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 17px;
+    width: 320px;
+    margin-top: 20px;
     justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 .parrafos-form p{
     padding: 0;
@@ -18,3 +20,4 @@
     color: #4338CA;
     font-weight: 600;
 }
+ 
