--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -2,12 +2,13 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 25px 40px 25px 40px;
-    position: relative;
+    position: absolute;
+    width: 100%;
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
     header img{
-        width: 50px;
+        width: 70px;
         height: 5.1vh;
     }
 }
