--- a/src/Components/ParrafosForm/parrafosform.css
+++ b/src/Components/ParrafosForm/parrafosform.css
@@ -14,6 +14,7 @@
     letter-spacing: 0.05em;
     color: black;
     font-weight: 500;
+    margin: 0;
 }
 .parrafos-form span{
     margin-left: 5px;
