--- a/src/Components/ContFormLogin/contformlogin.css
+++ b/src/Components/ContFormLogin/contformlogin.css
@@ -9,3 +9,8 @@
     background-color: #FAFCFC;
 }
 
+@media (min-width: 320px) and (max-width: 1024px) {
+    .contFormLogin{
+        width: 100%;
+    }
+}
