form login casi listo

--- a/src/Pages/ContFormLogin/contformlogin.css
+++ b/src/Pages/ContFormLogin/contformlogin.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #FAFCFC;
+    background-color: #EBEBEB;
 }
 
 @media (min-width: 320px) and (max-width: 1024px) {
