--- a/src/Components/BienvenidaRegister/bienvenidaregister.css
+++ b/src/Components/BienvenidaRegister/bienvenidaregister.css
@@ -22,6 +22,12 @@
     line-height: 14px;
     letter-spacing: 0.05em;
 }
+
+.welcomeH2 span{
+    color: #4338CA;
+    font-weight: 500;
+}
+
 @media (min-width: 320px) and (max-width: 767px) {
     .welcomeP{
         width: 290px;
