--- a/src/Components/Foother/foother.css
+++ b/src/Components/Foother/foother.css
@@ -12,7 +12,7 @@ footer{
     background-size: cover;
     height: 18vh;
     width: 100%;
-    border-radius: 0 0px 400px 400px;
+    border-radius: 0% 0% 20% 20%;
 }
 
 .suscribe{
