--- a/src/Components/NavIndex/navindex.css
+++ b/src/Components/NavIndex/navindex.css
@@ -1,5 +1,4 @@
 *{
-    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
@@ -42,6 +41,7 @@ nav{
 .perfil1 h4{
     font-weight: 500;
     width: 200px;
+    margin: 0;
 }
 
 .perfil1 p{
@@ -65,6 +65,13 @@ nav{
     align-self: stretch;
     flex-grow: 0;
     color: #fff;
+}
+
+#imagen-nav{
+    width: 45px;
+    height: 45px;
+    object-fit: cover;
+    border-radius: 49%;
 }
 
 .ancors-nav{
