--- a/src/Components/ContNewChapter/contnewchapter.css
+++ b/src/Components/ContNewChapter/contnewchapter.css
@@ -44,7 +44,7 @@
     #hamburguesa{
         width: 40px;
         height: 40px;
-        background-color: transparent;
+        /* background-color: transparent; */
     }
 
 }
