--- a/src/Pages/CardMangas/cardmangas.css
+++ b/src/Pages/CardMangas/cardmangas.css
@@ -34,7 +34,8 @@
   .text{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
+    padding-left: 10px;
     justify-content: center;
     width: 50%;
     gap: 40px;
@@ -60,7 +61,7 @@
     border-radius: 50px;
     background-color: #D1FBF0;
     color: #00BA88;
-    margin-left: -50px;
+    margin-left: 0px;
     margin-bottom: -40px;
   }
   .img-cart{
@@ -76,7 +77,7 @@
 
   @media (min-width: 320px) and (max-width: 692px) {
     .text a{
-        margin-left: -15px;
+        margin-left: 0px;
         margin-bottom: -20px;
       }
     .text{
@@ -94,7 +95,7 @@
         width: 45%;
       } 
       .text a{
-        margin-left: -15px;
+        margin-left: 0px;
         margin-bottom: -20px;
       }
       .text{
