--- a/src/Pages/PagesChapters/Page.css
+++ b/src/Pages/PagesChapters/Page.css
@@ -3,34 +3,98 @@
     margin: 0;
     box-sizing: border-box;
 }
-
-.chapterOne {
-    font-size: 14px;
+.mover {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
 }
 
-.imgMover img {
-    max-width: 100%;
-    height: auto;
+.div-chapter2 {
+    background-color: #4338CA;
+    border-top: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5rem;
+    height: 3rem;
 }
 
-.button {
-    font-size: 14px;
-    padding: 8px 12px;
+.parrafo-chapter2 {
+    color: white;
 }
 
-@media (max-width: 320px) {
-    .chapterOne {
-        font-size: 12px;
-    }
+.contenedor-capitulos {
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+}
 
-    .imgMover {
-        margin: 0 auto;
-        max-width: 320px;
-        overflow-x: scroll;
-    }
+.boton-back {
+    z-index: 1;
+    width: 30%;
+    height: 100%;
+    background: transparent;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    border: none;
+}
 
-    .button {
-        font-size: 12px;
-        padding: 6px 10px;
-    }
+.boton-next {
+    position: relative;
+    width: 30%;
+    height: 100%;
+    background: transparent;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    border: none;
+
+}
+
+.posi {
+    position: absolute;
+    height: 67vh;
+    width: 40vw;
+}
+
+.div-chapter3 {
+    background: #dbd9d9;
+    padding: 0.6rem;
+    margin-top: 1rem;
+
+}
+
+.chapter3 {
+    display: flex;
+    justify-content: center;
+}
+
+.parrafo-chapter3 {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    color: black
+}
+
+.comment {
+    width: 2rem;
+}
+
+.icono-flecha {
+    font-size: 20px;
+    color: #000;
+    position: relative;
+    top: 5px;
+    left: 5px;
+}
+
+.flecha {
+    width: 2rem
+}
+
+.flecha:hover {
+    width: 3rem;
 }
