--- a/src/Pages/Mangas/mangas.css
+++ b/src/Pages/Mangas/mangas.css
@@ -50,6 +50,7 @@
     z-index: 100;
     border-radius: 1rem;
     margin-top: -50px;
+    padding-bottom: 20px;
 }
 
 .cont-checks{
@@ -168,6 +169,26 @@
     width: 90%;
     margin-top: 20px;
     padding-bottom: 30px;
+  }
+
+  .cont-boton{
+    display: flex;
+    align-items: center;
+  }
+
+  .cont-boton .ancord{
+    background-color: #8883F0;
+    color: white;
+    border-radius: 5px;
+    padding: 10px;
+    font-weight: 400;
+    box-shadow: 0 0 5px rgb(90, 90, 90);
+    border: none;
+    margin: 10px;
+    cursor: pointer;
+  }
+  .cont-boton .ancord:hover{
+    background-color: #6560bb;
   }
 
 @media (min-width: 320px) and (max-width: 867px) {
