--- a/src/Pages/Mangas/mangas.css
+++ b/src/Pages/Mangas/mangas.css
@@ -191,15 +191,78 @@
     background-color: #6560bb;
   }
 
+  
 @media (min-width: 320px) and (max-width: 867px) {
     .cont-cartas{
         gap: 30px;
         justify-content: center;
     }
+    
 }  
+
+@media (min-width: 320px) and (max-width: 567px) {
+  .explore-mangas {
+    display: flex;
+    width: 72%;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 1.45rem;
+    font-weight: 450;
+    margin: 20px;
+  }
+
+  .img-mangas-mobile{ 
+    display: flex;
+    gap: 5px;
+  }
+
+  .img-mangas-mobile img{
+    width: 100%;
+    border-radius: 12px;
+    background: rgba(0, 0, 0, 0.8);
+   } 
+
+  .text-mobile-manga {
+    position: absolute;
+    margin-top: 4rem;
+    width: 6rem;
+    font-size: 1.1rem;
+    color: white;
+    text-align: center;
+  }
+
+  .img-mangas-mobile span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 33%;
+  }
+  .category-button2, .category-button3, .category-button4, .category-button5 {
+    width: 70px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .cont-checks{
+    gap: 15px;
+    justify-content: center;
+  }
+}
+
 
 @media (min-width: 692px) and (max-width: 1450px) {
     .cont-cartas{
         gap: 40px;
     }
+}
+
+@media (min-width: 568px) and (max-width: 9800px) {
+  .explore-mangas{
+    display: none;
+  }
+  .img-mangas-mobile{
+    display: none;
+  }
 }
