--- a/src/Components/DetailsManga/MangaPortada/mangaportada.css
+++ b/src/Components/DetailsManga/MangaPortada/mangaportada.css
@@ -1,7 +1,7 @@
 .img-title{
     width: 100%;
     height: auto;
-    margin-top:  7rem; 
+    padding-top: 6rem; 
     display: flex;
     flex-direction: column;
     align-items: center;
