--- a/src/Components/CreateManga/CreateManga.css
+++ b/src/Components/CreateManga/CreateManga.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
 }
 h1 {
     display: flex;
@@ -13,13 +14,14 @@ h1 {
     font-weight: 400;
 }
 .content-form {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     align-content: center;
+    background-color: rgb(245, 245, 245);
 }
 
 
