--- a/src/Pages/AuthorFrom/authorform.css
+++ b/src/Pages/AuthorFrom/authorform.css
@@ -3,6 +3,7 @@
   justify-content: center;
   width: 100%;
   height: 100vh;
+  background-color: rgb(243, 243, 243);
 }
 #author-form {
   margin-top: 8rem;
@@ -30,6 +31,7 @@
   outline: none;
   border: none;
   border-bottom: 1px solid blue;
+  background-color: transparent;
 }
 #button-author {
   background: #4338CA;
