--- a/src/Pages/PagesChapters/Page.css
+++ b/src/Pages/PagesChapters/Page.css
@@ -9,6 +9,7 @@
     flex-direction: column;
     align-content: center;
     justify-content: center;
+    background-color: rgb(250, 250, 250);
 }
 .imgChapter {
     height: 70vh;
@@ -96,7 +97,8 @@
 }
 
 .flecha {
-    width: 2rem
+    width: 2rem;
+    cursor: pointer;
 }
 
 .flecha:hover {
