--- a/src/Components/Mangaform/MangaForm.css
+++ b/src/Components/Mangaform/MangaForm.css
@@ -13,13 +13,14 @@ h1 {
     font-weight: 400;
 }
 .content-form {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     align-content: center;
+    background-color: rgb(247, 247, 247);
 }
 
 
