--- a/src/Components/NavIndex/navindex.css
+++ b/src/Components/NavIndex/navindex.css
@@ -68,10 +68,10 @@ nav{
 }
 
 #imagen-nav{
-    width: 45px;
+    width: 3rem;
     height: 45px;
     object-fit: cover;
-    border-radius: 49%;
+    border-radius: 50%;
 }
 
 .ancors-nav{
