--- a/src/Pages/MyMangas/mymangas.css
+++ b/src/Pages/MyMangas/mymangas.css
@@ -1,12 +1,12 @@
-.cont-manga{
+.cont-mangas{
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: rgb(241, 241, 241);
 }
 
-.fondo-manga{
-    background: url(../../../public/mangas.png);
+.fondo-mangas{
+    background: url(../../../public/imagen155.png);
     height: 60vh;
     width: 100%;
     background-size: cover;
@@ -18,11 +18,11 @@
     padding-top: 80px;
 }
 
-.fondo-manga h2 {
+.fondo-mangas h2 {
     font-weight: 500;
 }
 
-.fondo-manga span{
+.fondo-mangas span{
     background-color: white;
     display: flex;
     border-radius: 10px;
@@ -30,7 +30,7 @@
     width: 60vw;
 }
 
-.fondo-manga span input{
+.fondo-mangas span input{
     border: none;
     border-radius: 10px;
     font-size: 24px;
@@ -39,7 +39,7 @@
     outline: none;
 }
 
-.section-manga {
+.section-mangas {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -53,20 +53,13 @@
     padding-bottom: 20px;
 }
 
-.cont-checks{
+.cont-check{
     display: flex;
     flex-wrap: wrap;
     padding-top: 40px;
     gap: 20px;
     margin: 20px;
     width: 90%;
-}
-
-.check{
-    background-color: red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
   .category-button2 {
@@ -187,18 +180,18 @@
     margin: 20px;
   }
 
-  .img-mangas-mobile{ 
+  .img-mangas-mobiles{ 
     display: flex;
     gap: 5px;
   }
 
-  .img-mangas-mobile img{
+  .img-mangas-mobiles img{
     width: 100%;
     border-radius: 12px;
     background: rgba(0, 0, 0, 0.8);
    } 
 
-  .text-mobile-manga {
+  .text-mobile-mangas {
     position: absolute;
     margin-top: 4rem;
     width: 6rem;
@@ -207,7 +200,7 @@
     text-align: center;
   }
 
-  .img-mangas-mobile span {
+  .img-mangas-mobiles span {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -238,7 +231,7 @@
   .explore-mangas{
     display: none;
   }
-  .img-mangas-mobile{
+  .img-mangas-mobiles{
     display: none;
   }
 }
