--- a/src/Pages/CardMyMangas/cardmymangas.css
+++ b/src/Pages/CardMyMangas/cardmymangas.css
@@ -1,22 +1,22 @@
-.kodomoBarr{
+.comic{
     width: 7px;
     height: 130px;
     background-color:#8883F0;
     margin-top: 22px;
   }
-  .shojoBarr{
+  .shojo{
     width: 7px;
     height: 130px;
     background-color:#00BA88;
     margin-top: 22px;
   }
-  .seinenBarr{
+  .seinen{
     width: 7px;
     height: 130px;
     background-color:#FC9C57;
     margin-top: 22px;
   }
-  .shonenBarr{
+  .shonen{
     width: 7px;
     height: 130px;
     background-color:#EF8481;
@@ -39,16 +39,16 @@
     width: 50%;
     gap: 20px;
   }
-  .kodomo{
+  .style-kodomo{
     color: #8883F0;
   }
-  .shojo{
+  .style-shojo{
     color: #00BA88;
   }
-  .seinen{
+  .style-seinen{
     color: #FC9C57;
   }
-  .shonen{
+  .style-shonen{
     color: #EF8481;
   }
 
