--- a/src/Pages/CardMangas/cardmangas.css
+++ b/src/Pages/CardMangas/cardmangas.css
@@ -31,13 +31,13 @@
     border-radius: 10px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.03);        
   }
-  .text{
+  .text1{
     display: flex;
     flex-direction: column;
     align-items: start;
     padding-left: 10px;
     justify-content: center;
-    width: 50%;
+    width: 100%;
     gap: 40px;
   }
   .style-comic{
@@ -53,7 +53,7 @@
     color: #EF8481;
   }
 
-  .text a{
+  .text1 a{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,7 +63,7 @@
     background-color: #D1FBF0;
     color: #00BA88;
     margin-left: 0px;
-    margin-bottom: -40px;
+    margin-bottom: -20px;
   }
   .text a:hover{
     background-color: #9cd8c8;
