--- a/src/Pages/FormRegister/formregister.css
+++ b/src/Pages/FormRegister/formregister.css
@@ -1,8 +1,9 @@
-form{
+.formulario{
     display: flex;
     flex-direction: column;
     gap: 20px;
     margin-top: 30px;
+    width: 56%;
 }
 
 fieldset{
@@ -36,12 +37,13 @@ fieldset input{
 .div-check{
     display: flex;
     align-items: center;
+    justify-content: flex-start !important;
     font-size: 12px;    
     line-height: 1vh;
     letter-spacing: 0.05em;
     color: #1F1F1F;
     gap: 5px;
-    width: 100%;
+    width: 410px;
 }
 #sign-up{
     width: 408px;
@@ -120,6 +122,9 @@ fieldset input{
         width: 308px;
     }
     .parrafos-form{
+        width: 310px;
+    }
+    .div-check{
         width: 310px;
     }
 }
