--- a/src/Components/ContNewChapter/contnewchapter.css
+++ b/src/Components/ContNewChapter/contnewchapter.css
@@ -1,37 +1,42 @@
 .cont-dad-chapter{
     display: flex;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: #EBEBEB;
     align-items: center;
     justify-content: center;
+    background-color: rgb(247, 247, 247);
 }
 .cont-new-chapter{
     display: flex;
     flex-direction: column;
     min-width: 60%;
     text-align: center;
+    gap: 20px;
 }
 .input-chapter{
     width: 100%;
     border: 0;
     padding: 5px;
-    /* padding-bottom: 10px; */
-    border-bottom: 2px solid #424242;
+    border-bottom: 1px solid #4338d4;
     background-color: transparent;
 }
-
 .submit-chapter{
     background-color: #4338CA;
     color: white;
     padding: 10px;
-    border-radius: 20px;
-    width: 250px;
+    font-size: 18px;
+    border-radius: 30px;
+    width: 320px;
     border: transparent;
+    cursor: pointer;
+    border: inset black;
 }
-.form-new-chapter{
+#form-new-chapter{
     display: flex;
+    flex-direction: column;
     align-items: center;
+    gap: 40px;
 }
 @media (min-width: 768px){
     .cont-new-chapter{
