--- a/src/Components/Mangaform/MangaForm.css
+++ b/src/Components/Mangaform/MangaForm.css
@@ -5,28 +5,28 @@
 }
 h1 {
     display: flex;
-    font-size: 1.5rem;
+    font-size: 2.2rem;
     align-items: center;
     justify-content: center;
     text-align: center;
     color:#4338CA;
-    
+    font-weight: 400;
 }
 .content-form {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     align-content: center;
-
+    background-color: rgb(247, 247, 247);
 }
+
 
 .fieldsetMove {
     border: none;
     display: flex;
-    width: 70vw;
     border-radius: 0;
     margin: 0;
     padding: 0;
@@ -34,32 +34,46 @@ h1 {
 
 }
 
+.form-create-manga{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .inputMove {
     border-radius: 0;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(43, 10, 226);
+    width: 100%;
 }
 #selectMove {
     border: 0;
-    width: 68vw;
     color: gray;
     font-size: 0.9rem;
+    width: 100%;
     background-color: transparent;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(17, 20, 233);
+}
+.cont-boton-manga{
+    display: flex;
+    width: 100%;
+    justify-content: center;
 }
 
 .btn-manga {
     background: #4338CA;
     border-radius: 3rem  ;
     border: 1px solid #4338CA;
-    width: 68vw;
+    width: 60%;
     height: 2.5rem;
     font-family: Roboto;
     font-size: 24px;
     font-weight: 700;
     line-height: 28px;
     letter-spacing: 0em;
-    text-align: center;
     color: white;
+    font-weight: 400;
     font-size: 1.2rem;
+    cursor: pointer;
+    border: groove black;
 }
 
