--- a/src/Pages/AuthorProfile/AuthorProfile.css
+++ b/src/Pages/AuthorProfile/AuthorProfile.css
@@ -12,13 +12,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: 120vh;
 }
 
 #profileBackground {
     background-image: url(../../../public/Rectangle_606.png);
     background-size: cover;
     background-position: center;
-    height: 38vh;
+    height: 30vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,6 +29,10 @@
     width: 100%;
     color: white;
     font-size: 1.5rem;
+}
+#tituloAuthor {
+    color: white;
+    font-weight: bold;
 }
 
 .sectionProfile {
@@ -82,23 +87,47 @@
     width: 1rem;
 }
 
-@media (max-width: 748px) {
+@media (min-width: 320px) and (max-width: 425px) {
+     .contenedor { 
+        width: 100vw;
+        height: 190vh;
+
+    } 
     #profileBackground {
+       height: 10rem;
+    }
+    #tituloAuthor {
         display: none;
     }
 
     .sectionProfile {
         display: flex;
-        justify-content: center;
+        justify-content: right;
         align-items: center;
         flex-direction: column-reverse;
         background: rgb(255, 255, 255);
-        width: 95%;
-        min-height: 40vh;
         position: static;
-        margin-top: 0;
         z-index: 100;
         border-radius: 1rem;
-        margin-bottom: 3rem;
     }
 }
+@media (min-width: 424px) and (max-width: 748px) {
+
+    #profileBackground {
+        height: 14rem;
+     }
+     .contendor {
+        height: 120vh;
+     }
+}
+@media (min-width: 748px) and (max-width: 1024px){
+    .contenedor {
+        height: 140vh;
+        
+    }
+  
+    .profile {
+        margin-bottom: 6rem;
+    }
+}
+
