--- a/src/Components/Foother/foother.css
+++ b/src/Components/Foother/foother.css
@@ -95,6 +95,25 @@ a{
     padding-left: 20px;
     margin-bottom: 15px;
 }
+.button-suscribe{
+    background: linear-gradient(153.39deg, #2e1bdb -13.9%, #4839cf 58.69%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 6px;
+    outline: none;
+    border: none;
+    padding: 1rem;
+    width: 13rem;
+    height: 2.5rem;
+    color: white;
+    font-size: 1.1rem;
+  }
+  
+  button:hover {
+    box-shadow: 0px 0px 5px rgba(37, 23, 228, 0.74);
+}
 
 @media (min-width: 320px) and (max-width: 867px) {
     .suscribe{
