--- a/src/Components/DetailsManga/MangaPortada/mangaportada.css
+++ b/src/Components/DetailsManga/MangaPortada/mangaportada.css
@@ -6,9 +6,10 @@
     flex-direction: column;
     align-items: center;
     justify-items: center;
+    background-color: rgb(247, 247, 247);
 }
 .img-manga{
-width: 50%;
+max-width: 50%;
 height: auto;
 }
 .title{
@@ -18,4 +19,6 @@ height: auto;
     font-style: normal;
     font-size: 2rem;
     color: #2a2a2a;
+    text-align: center;
+    padding: 20px;
 }
