--- a/src/Components/Mangaform/MangaForm.css
+++ b/src/Components/Mangaform/MangaForm.css
@@ -2,7 +2,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    
 }
 h1 {
     display: flex;
@@ -21,7 +20,7 @@ h1 {
     justify-content: center;
     align-items: center;
     align-content: center;
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(247, 247, 247);
 }
 
 
@@ -35,7 +34,7 @@ h1 {
 
 }
 
-form{
+.form-create-manga{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,12 +53,17 @@ form{
     background-color: transparent;
     border-bottom: 1px solid rgb(17, 20, 233);
 }
+.cont-boton-manga{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
 
 .btn-manga {
     background: #4338CA;
     border-radius: 3rem  ;
     border: 1px solid #4338CA;
-    width: 300px;
+    width: 60%;
     height: 2.5rem;
     font-family: Roboto;
     font-size: 24px;
