--- a/src/Components/EditChapterForm/editchapterform.css
+++ b/src/Components/EditChapterForm/editchapterform.css
@@ -1,71 +1,129 @@
-.form-edit {
+@media screen and (max-width: 768px) {
+    .form-edit-chapter {
+        width: 100vw;
+        background-color: #EBEBEB !important;
+    }
+    .edit-chapter-inputs input {
+        background-color: #EBEBEB !important;
+    }
+    .form-edit-chapter select{
+        background-color: #EBEBEB !important;
+    }
+}
+
+.form-edit-chapter {
     display: flex;
     flex-direction: column;
-    gap: 28px;
-}
-.titleChapter-toEdit{
-    border-bottom: rgba(66, 66, 66, 1) 1px solid;
-    font-family: Montserrat, sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    padding-left: 10px;
-    padding-bottom: 5px;
-    color: gray;
-
-}
-.form-edit input {
-    width: 280px;
-    border: none;
-    border-bottom: rgba(66, 66, 66, 1) 1px solid;
-    background-color: transparent;
-    color: gray;
-    outline: none;
-    font-family: Montserrat, sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    padding-left: 10px;
-    padding-bottom: 5px;
+    min-width: 50vw;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    height: 600px;
+    padding-top: 2rem;
+    padding-bottom: 5rem;
 }
 
-.form-edit select {
-    width: 280px;
-    border: none;
-    border-bottom: rgba(66, 66, 66, 1) 1px solid;
-    background-color: transparent;
-    color: gray;
-    outline: none;
-    font-family: Montserrat, sans-serif;
+.edit-chapter-title {
     font-weight: 400;
-    font-size: 16px;
-    padding-left: 10px;
-    padding-bottom: 5px;
+    font-size: 36px;
+    line-height: 54px;
+    color: #222222;
 }
 
-.btn-edit {
+.edit-chapter-inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.edit-chapter-inputs input {
+    background-color: white;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
     width: 280px;
-    height: 59px;
-    background-color: rgba(52, 211, 153, 1);
-    color: white;
-    border-radius: 40px;
+    height: 24px;
     border: none;
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 700;
+}
+
+.edit-chapter-inputs select {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #9D9D9D;
+    width: 280px;
+    border: none;
+}
+
+.input-edit-chapter .line {
+    position: relative;
+    bottom: 3px;
+    border-bottom: 1px solid #424242;
+}
+
+
+
+.input-text-edit {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #9D9D9D;
+    padding-left: 3px;
+}
+
+.input-text-edit::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #9D9D9D;
+}
+
+
+.form-edit-chapter-btn {
+    background: #34D399;
+    border-radius: 50000px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 24px;
-    text-align: center;
+    font-weight: 700;
+    line-height: 36px;
+    color: #FFFFFF;
+    letter-spacing: 0em;
+    width: 280px;
+    height: 76px;
+    border: none;
 }
 
-.btn-delete {
-    width: 280px;
-    height: 59px;
-    background-color: #fad3d2;
-    ;
-    color: rgba(238, 131, 128, 1);
-    border-radius: 40px;
-    border: none;
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 700;
+.delete-btn {
+    background: #FBDDDC !important;
+    color: #EE8380 !important;
+    border-radius: 50000px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 24px;
-    text-align: center;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0em;
+    width: 280px;
+    height: 76px;
+    border: none;
+}
+
+.form-edit-chapter-btn:hover,
+.delete-btn:hover {
+    cursor: pointer;
+}
+
+
+
+.select-chapter:focus {
+    outline: none;
+}
+
+.edit-chapter-btns {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 }
